objects/Account.object
<CustomObject>
    <fields>
        <fullName>Loged_In_Through_Salesforce__c</fullName>
        <label>Loged In Through Salesforce</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>back_deploy_test__c</fullName>
        <description>testing back deploying created user story from prod</description>
        <label>back deploy test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>debugtest__c</fullName>
        <label>debugtest</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test2__c</fullName>
        <label>test2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test3__c</fullName>
        <label>test3</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>